# BrainIAC

./: .env.example  .gitignore  LICENSE  README.md  download_checkpoints.py  pyproject.toml  pytest.ini
scripts/: make_isles2022_segmentation_config.py  prepare_isles2022_segmentation_csv.py  train_isles2022_segmentation.sh
src/: dataset_segmentation.py  generate_segmentation.py  segmentation_model.py  test_segmentation.py  train_lightning_segmentation.py
src/mcp-service/: server.py
test/: conftest.py  test_backbone_smoke.py  test_download_checkpoints.py  test_segmentation_io.py  test_segmentation_smoke.py
