[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainiac"
version = "0.1.0"
description = "BrainIAC pipelines for generalized structural brain MRI analysis."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "autograd>=1.7",
  "einops>=0.7",
  "lifelines>=0.27",
  "matplotlib>=3.7",
  "monai~=1.3.1",
  "nibabel>=5.2",
  "numpy>=1.23",
  "opencv-python>=4.8",
  "pandas>=1.5",
  "pydicom>=2.4",
  "PyYAML>=6.0",
  "pytorch-lightning>=2.3",
  "scikit-image>=0.21",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "seaborn>=0.12",
  "SimpleITK>=2.4",
  "torch>=2.0",
  "torchmetrics>=1.4",
  "torchvision>=0.15",
  "tqdm>=4.66",
  "wandb>=0.17",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["preprocessing*"]
